--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+   <!-- <string name="default_web_client_id">51643308532-clo824oss78abenb4o7ke5h1s3lobame.apps.googleusercontent.com</string>-->
 </resources>
